# python-coreutils

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: makefile-workflow.yaml
coreutils/: sed.py
coreutils/sed/: __init__.py  sed.py  utils.py
tests/: test_sed.py
tests/sed/: test_misc.py  test_search.py  test_substitute.py
