[tool.poetry]
name = "python-coreutils"
version = "0.1.0"
description = "Coreutils rewritten for using in python scripts"
authors = ["Pepega"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
mypy = "0.782"
flake8 = "3.8.3"
flake8-isort = "3.0.0"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.2.3"
flake8-debugger = "3.2.1"
flake8-eradicate = "0.4.0"
flake8-pytest = "1.3"
pep8-naming = "0.11.1"
black = "19.10b0"
isort = "4.3.21"
unify = "0.5"
pylint = "2.4.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
